--- a/index.html
+++ b/index.html
@@ -6,11 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
 
+    </header>
+    <!-- header end -->
+
+    <main>
+        <!-- top players and top blogs -->
+        <section class="container">
+            <div class="top-players ">
+                <h3 class="section-title">Top Players</h3>
+                <div class="players">
+                    <div class="player">
+
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Top Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Top Player-2</h3>
+                    </div>
+                    <div class=" player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Top Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Top Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Top Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Top Player-6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top-Blogs</h2>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
